--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 btleplug = { version = "0.10", features = ["serde"] }
+thiserror = "1.0.40"
 tokio = { version = "1.26.0", features = ["full"] }
+tokio-stream = "0.1.12"
 uuid = "1.3.0"
